Update Form Report User

--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -23,13 +23,30 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">@Model.ReportPeriod.report_period_name</h4>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Thông báo</h4>
+                        <div class="card-header-action">
+                            <a data-collapse="#mycard-collapse" class="btn btn-icon btn-info" href="#"><i class="fas fa-plus"></i></a>
+                        </div>
+                    </div>
+                    <div class="collapse" id="mycard-collapse" style="">
+                        <div class="card-body">
+                            Thời gian báo cáo: @Model.ReportPeriod.start_date - @Model.ReportPeriod.end_date
+                        </div>
+                        <div class="card-footer">
+                            Card Footer
+                        </div>
                     </div>
                 </div>
                 @if (formPer.Count() > 0)
                 {
                     int per = formPer.First().personal_report_id;
                     <div class="col-12">
+
                         <div class="card">
                             <div class="card-body">
                                 <div id="accordion">
@@ -47,7 +64,7 @@
                                                         @(((char) j).ToString()). @items.Category.category_content.ToUpper()
                                                     </h4>
                                                     <div class="card-header-action">
-                                                        <a data-collapse="#panel-body-@(((char) j).ToString())" class="btn btn-icon" href="#"><i class="fas fa-plus"></i></a>
+                                                        <a data-collapse="#panel-body-@(((char) j).ToString())" class="btn btn-icon" href="#@(((char) j).ToString())"><i class="fas fa-plus"></i></a>
                                                     </div>
                                                 </div>
 
@@ -57,46 +74,48 @@
                                         {
                                             lstId += items.category_id + "-";
                                             i++;
-                                            <div class="accordion-body collapse" id="panel-body-@(((char) j).ToString())" data-parent="#accordion" style="">
-                                                <div class="col-lg-12">
-                                                    <input hidden id="dem-@items.category_id" value="@models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count()" />
-                                                    <input hidden id="frmPerDetail-@items.category_id" value="@items.form_personal_report_detail_id" />
-                                                    <table class="table table-bordered dataTable">
-                                                        <tbody>
-                                                            <tr class="" style="max-width: 50px">
-                                                                <th colspan="2">@(i). @items.Category.category_content</th>
-                                                            </tr>
-                                                            @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count() > 0)
-                                                            {
-                                                                int inputIndex = 0;
-                                                                foreach (var itemss in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                            if (items.Category.category_of_id == null)
+                                            {
+                                                <div class="accordion-body collapse" id="panel-body-@(((char) j).ToString())" data-parent="#accordion" style="">
+                                                    <div class="col-lg-12">
+                                                        <input hidden id="dem-@items.category_id" value="@models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count()" />
+                                                        <input hidden id="frmPerDetail-@items.category_id" value="@items.form_personal_report_detail_id" />
+                                                        <table class="table table-bordered dataTable">
+                                                            <tbody>
+                                                                <tr class="" style="max-width: 50px">
+                                                                    <th colspan="2">@(i). @items.Category.category_content</th>
+                                                                </tr>
+                                                                @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).Count() > 0)
                                                                 {
-                                                                    inputIndex++;
-                                                                    <tr id="formInput-@items.category_id-@inputIndex">
-                                                                        <td colspan="2">
-                                                                            <input type="text" value="@itemss.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex">
-                                                                            <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                                                        </td>
-                                                                    </tr>
+                                                                    int inputIndex = 0;
+                                                                    foreach (var itemss in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                                                    {
+                                                                        inputIndex++;
+                                                                        <tr id="formInput-@items.category_id-@inputIndex">
+                                                                            <td colspan="2">
+                                                                                <input type="text" value="@itemss.personal_report_content" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-@items.category_id-@inputIndex">
+                                                                                <p hidden id="validation-noidung-@items.category_id-@inputIndex" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
+                                                                            </td>
+                                                                        </tr>
+                                                                    }
                                                                 }
-                                                            }
-                                                            <tr hidden id="append-@items.category_id"></tr>
-                                                            <tr>
-                                                                <td>
-                                                                    <button role="button" name="@items.category_id" id="xoanoidung-@items.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                </td>
-                                                                <td>
-                                                                    <button role="button" name="@items.category_id" id="themnoidung-@items.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
-                                                                </td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
+                                                                <tr hidden id="append-@items.category_id"></tr>
+                                                                <tr>
+                                                                    <td>
+                                                                        <button role="button" name="@items.category_id" id="xoanoidung-@items.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
+                                                                    </td>
+                                                                    <td>
+                                                                        <button role="button" name="@items.category_id" id="themnoidung-@items.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            @*<div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
+                                            }
 
 
-                                            </div>*@
+
                                         }
                                     }
                                 </div>
@@ -151,7 +170,7 @@
                                                         @(((char) j).ToString()). @items.Category.category_content.ToUpper()
                                                     </h4>
                                                     <div class="card-header-action">
-                                                        <a data-collapse="#panel-body-@(((char) j).ToString())" class="btn btn-icon" href="#"><i class="fas fa-plus"></i></a>
+                                                        <a data-collapse="#panel-body-@(((char) j).ToString())" class="btn btn-icon" href="#@(((char) j).ToString())"><i class="fas fa-plus"></i></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -161,7 +180,7 @@
                                             lstId += items.category_id + "-";
                                             i++;
                                             <div class="accordion-body collapse" id="panel-body-@(((char) j).ToString())" data-parent="#accordion" style="">
-                                                <div class="col-lg-12">
+                                                <div class="col-lg-12 ">
                                                     <input hidden id="dem-@items.category_id" value="1" />
                                                     <input hidden id="frmPerDetail-@items.category_id" value="@items.form_personal_report_detail_id" />
                                                     <table class="table table-bordered dataTable">
@@ -190,7 +209,7 @@
                                             </div>
                                             @*<div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
 
-                    </div>*@
+                                    </div>*@
                                         }
                                     }
                                 </div>
@@ -229,7 +248,7 @@
 
                 }
 
-                
+
 
             </div>
         </div>
