--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MonthlyStatement.Models.Faculty
 
+
 @{
     int i = 0;
 }
@@ -23,6 +24,11 @@
                                 <i class="fa fa-plus"></i>
                                 Thêm thành viên
                             </button>
+                            <a style="color:white" class="btn btn-warning btn-round" href="#" type="button" data-toggle="modal"
+                               data-target="#exampleModalCenter">
+                                <i class="fa fa-plus"></i>
+                                Import
+                            </a>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped" id="table-1">
@@ -137,25 +143,25 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="formModal">Chỉnh sửa thông tin</h5>
+                <h5 class="modal-title" id="formModal">Thêm thành viên</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            @using (Html.BeginForm("Edit_Profile", "Profile", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            @using (Html.BeginForm("AddMember", "Faculty", FormMethod.Post, new { }))
             {
                 <div class="modal-body">
                     <form class="">
                         <div class="form-group">
                             <label>Email</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Email" name="email" value="" readonly>
+                                <input type="text" class="form-control" placeholder="Nhập email" name="email" value="">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label>Khoa</label>
+                            <label>Họ và tên</label>
                             <div class="input-group">
-
+                                <input type="text" class="form-control" placeholder="Nhập họ và tên" name="name" value="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -165,18 +171,43 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label>Họ và tên</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Nhập họ và tên" name="name" value="">
-                            </div>
+                            <div class="col-md-6">
+                                <label class="small mb-1">Vai trò</label>
+                             </div>
                         </div>
+
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary m-t-15 waves-effect">Lưu thông tin</button>
+                            <button type="submit" class="btn btn-primary m-t-15 waves-effect">Thêm thành viên</button>
                             <button type="button" class="btn btn-secondary m-t-15" data-dismiss="modal">Đóng</button>
                         </div>
                     </form>
                 </div>
             }
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Thêm danh sách người dùng</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <div class="form-group">
+                    <label>File</label>
+                    <input type="file" id="fileimport" class="form-control">
+                </div>
+                <p id="importfilevalidation" hidden="hidden" class="text-danger"></p>
+            </div>
+            <div class="modal-footer bg-whitesmoke br">
+                <button type="button" class="btn btn-primary" id="importUser">Save</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
@@ -202,6 +233,37 @@
         $(".upload-button").on('click', function () {
             $(".file-upload").click();
         });
+    });
+    $('#importUser').on('click', function () {
+
+        $('#importfilevalidation').hide();
+        let fileimport = $('#fileimport').val();
+        let fileType = fileimport.substr(fileimport.lastIndexOf('.') + 1).toLowerCase();
+        var check = true;
+
+        if (fileimport.trim().length < 1) {
+            check = false;
+            $('#importfilevalidation').text("Bạn chưa chọn file, Hãy chọn file danh sách cần nhập.").show().prop("hidden", false);
+        } else if (fileType != "xlsx" && fileType != "xls") {
+            check = false;
+            $('#importfilevalidation').text("File không đúng định dạng, Vui lòng chọn file có định dạng .xls/.xlsx.").show().prop("hidden", false);
+        }
+        if (check == true) {
+            var formData = new FormData();
+            formData.append('lstUser', $("#fileimport")[0].files[0]);
+
+            $.ajax({
+                url: $('#requestUrl').val() + 'Admin/Faculty/ImportUser',
+                type: 'POST',
+                dataType: 'html',
+                contentType: false,
+                processData: false,
+                data: formData
+            }).done(function (ketqua) {
+                swal('Thành công', 'Cập nhật thông tin thành công', 'success');
+                $('#fileimport').val(null);
+            });
+        }
     });
 </script>
 
