--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -31,11 +31,11 @@
             @{
                 Html.RenderPartial("_NavBarPartialView");
             }
-            <div class="main-sidebar sidebar-style-2">
+            <div class="main-sidebar sidebar-style-2"style="background-image: linear-gradient(rgba(241, 23, 52, 0.9), rgba(20, 13, 18, 0.9)),url(../../assets/img/vanlangcs3.jpg); background-position: center; background-repeat: no-repeat; background-size: cover">
                 <aside id="sidebar-wrapper">
                     <div class="sidebar-brand">
                         <a href="@Url.Action("Index", "Home", new { Area = "" })">
-                            <img alt="image" src="~/assets/img/vlu/logo.png" class="header-logo" /> <span class="logo-name">Văn Lang</span>
+                            <img alt="image" src="~/assets/img/vlu/logo.png" class="header-logo" /> <span class="logo-name"style="color:#fff">Văn Lang</span>
                         </a>
                     </div>
                     @if (User.IsInRole("Quản trị viên"))
@@ -73,7 +73,7 @@
                                 <a href="@Url.Action("Personal", "Report", new { Area = "Personal" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                             </li>
                             <li class=@(ViewBag.Title == "Quản lý biểu mẫu" ? "active" : "nav-item")>
-                                <a href="@Url.Action("ListReportYear", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="edit"></i><span>Quản lý biểu mẫu</span></a>
+                                <a href="@Url.Action("Index", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="edit"></i><span>Quản lý biểu mẫu</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
