--- a/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
+++ b/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
@@ -33,32 +33,19 @@
             <div class="dropdown-menu dropdown-list dropdown-menu-right pullDown">
                 <div class="dropdown-header">
                     Notifications
-                    <div class="float-right">
-                        <a href="#">Mark All As Read</a>
-                    </div>
+                    
                 </div>
                 <div class="dropdown-list-content dropdown-list-icons">
-                    <a href="#" class="dropdown-item dropdown-item-unread">
-                        <span class="dropdown-item-icon bg-primary text-white">
-                            <i class="fas
-												fa-code"></i>
-                        </span> <span class="dropdown-item-desc">
-                            Template update is
-                            available now! <span class="time">
-                                2 Min
-                                Ago
-                            </span>
-                        </span>
-                    </a> <a href="#" class="dropdown-item">
+                     <a href="#" class="dropdown-item">
                         <span class="dropdown-item-icon bg-info text-white">
                             <i class="far
 												fa-user"></i>
                         </span> <span class="dropdown-item-desc">
-                            <b>You</b> and <b>
-                                Dedik
-                                Sugiharto
-                            </b> are now friends <span class="time">
-                                10 Hours
+                            <b>Form</b> báo <b>
+                                cáo tháng 10
+                            </b> 
+                         <span class="time">
+                                5 Hours
                                 Ago
                             </span>
                         </span>
@@ -67,9 +54,8 @@
                             <i class="fas
 												fa-check"></i>
                         </span> <span class="dropdown-item-desc">
-                            <b>Kusnaedi</b> has
-                            moved task <b>Fix bug header</b> to <b>Done</b> <span class="time">
-                                12
+                            <b>Hoàn</b>thành báo cáo tháng 10 <b></b>  <span class="time">
+                                5
                                 Hours
                                 Ago
                             </span>
@@ -78,21 +64,19 @@
                         <span class="dropdown-item-icon bg-danger text-white">
                             <i class="fas fa-exclamation-triangle"></i>
                         </span> <span class="dropdown-item-desc">
-                            Low disk space. Let's
-                            clean it! <span class="time">17 Hours Ago</span>
+                            Hết hạn làm báo cáo <span class="time">7 Hours Ago</span>
                         </span>
                     </a> <a href="#" class="dropdown-item">
                         <span class="dropdown-item-icon bg-info text-white">
                             <i class="fas
 												fa-bell"></i>
                         </span> <span class="dropdown-item-desc">
-                            Welcome to Otika
-                            template! <span class="time">Yesterday</span>
+                            Làm báo cáo tháng 10 <span class="time">Yesterday</span>
                         </span>
                     </a>
                 </div>
                 <div class="dropdown-footer text-center">
-                    <a href="#">View All <i class="fas fa-chevron-right"></i></a>
+                    <a href="~/Areas/Admin/Views/Nofication.html">View All <i class="fas fa-chevron-right"></i></a>
                 </div>
             </div>
         </li>
