--- a/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Index.cshtml
@@ -19,11 +19,7 @@
                         <div class="col-sm-12 buttons">
                             <a style="color:white" type="button" class="btn btn-warning btn-round" href="@Url.Action("Create", "Categories")">
                                 <i class="fa fa-plus"></i>
-                                Tạo danh mục cha
-                            </a>
-                            <a style="color:white" type="button" class="btn btn-danger btn-round" href="@Url.Action("Create1", "Categories")">
-                                <i class="fa fa-plus"></i>
-                                Tạo danh mục con
+                                Tạo mới danh mục
                             </a>
                         </div>
                         <div class="table-responsive">
@@ -73,6 +69,7 @@
 
                                         {
                                             j++;
+                                            int k = 0;
                                             <tr class="Search">
                                                 <td class="text-center">
                                                     @(i).@(j)
@@ -93,6 +90,33 @@
                                                     </div>
                                                 </td>
                                             </tr>
+                                            foreach (var itemss in Model.Where(c => c.category_of_id == items.category_id).ToList())
+
+                                            {
+                                                k++;
+                                                <tr class="Search">
+                                                    <td class="text-center">
+                                                        @(i).@(j).@(k)
+                                                    </td>
+                                                    <td>
+                                                        &emsp;
+                                                        &emsp;
+                                                        &emsp;
+                                                        &emsp;
+                                                        @itemss.category_content
+                                                    </td>
+                                                    <td>
+                                                        #
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <div class="buttons">
+                                                            <a class="btn btn-icon btn-primary" data-original-title="Sửa" href="@Url.Action("Edit", "Categories", new { id = items.category_id })">
+                                                                <i class="far fa-edit"></i>
+                                                            </a>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            }
                                         }
                                     }
                                 </tbody>
