Code Feedback User/Admin

--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -189,7 +189,7 @@
                                             {
                                                 lstId += items.category_id + "-";
                                                 i++;
-                                                <div class="accordion-body collapse" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
+                                                <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
                                                     <div class="col-lg-12 ">
                                                         <input hidden id="dem-@items.category_id" value="1" />
                                                         <input hidden id="frmPerDetail-@items.category_id" value="@items.form_personal_report_detail_id" />
