--- a/MonthlyStatement/Areas/Admin/Views/Notification/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Notification/Index.cshtml
@@ -1,87 +1,169 @@
-﻿
+﻿@{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 <style>
-    .toast {
-        width: 97%;
-        height: 80px;
-        padding: 20px;
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: "Poppins",sans-serif;
+    }
+
+    .body {
         background-color: #fff;
-        border-radius: 7px;
+    }
+
+    .container {
+        max-width: 100%;
+        transform: translateX(-68%);
+        left: 68%;
+        margin: 5px 0;
+        top: 120px;
+        background-color:#fff;
+        position: absolute;
+        box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    }
+
+    .tabs {
         display: grid;
-        grid-template-columns: 1.3fr 6fr 0.5fr;
-        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.08);
+        grid-template-columns: repeat(2,1fr);
     }
 
-    .success {
-        border-left: 8px solid #47f447;
+    h3 {
+        background-color: #e4e9fd;
+        text-align: center;
+        padding: 15px 0;
+        cursor: pointer;
+        font-weight: 600;
     }
 
-    .toast:not(:last-child) {
-        margin-bottom: 30px;
+    .tab-content {
+        background-color: #fff;
+        padding: 50px 40px;
     }
 
-    .form {
-        border-left: 8px solid hsl(197, 89%, 62%);
+        .tab-content h4 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #000224;
+            font-family: 600;
+        }
+
+        .tab-content p {
+            text-align: justify;
+            line-height: 2;
+            color: #202238;
+            letter-spacing: 0.8px;
+            grid-template-columns: 1.3fr 6fr 0.5fr;
+            box-shadow: 0 25px 45px rgba(0, 0, 0, 0.10);
+            background-color: beige;
+            border-radius: 10px;
+            padding: 20px;
+        }
+
+
+        .tab-content div {
+            display: none;
+        }
+
+        .tab-content .active {
+            display: block;
+        }
+
+    .tabs .active {
+        background-color: #fff;
+        color: #4d5bf9;
     }
 
-    .error {
-        border-left: 8px solid #f44747;
+
+    form input {
+        display: block;
+        width: 100%;
+        margin: 4px 0;
+        padding: 8px 15px;
+        font-size: 15px;
+        border: 1px solid beige;
+        font-family: "Lato",sans-serif;
+        outline: none;
     }
 
-    .list {
-        border-left: 8px solid #47daf4;
+    .submit-section {
+        background: #e4e9fd;
+        width: 100%;
+        margin: 4px 0;
+        padding: 8px 15px;
+        outline: none;
     }
+
+        .submit-section button {
+            background: #082c5c;
+            padding: 10px 40px;
+            display: block;
+            text-transform: uppercase;
+            outline: none;
+            font-size: 25px;
+            box-shadow: 0 0 1px #000;
+            margin: 0 auto;
+        }
 </style>
-<section class="section " style="padding: 30px">
+<section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card-body">
                     <div class="card">
-                        <div class="card-header bg-primary" style="height:96px">
+                        <div class="card-header bg-primary"style="height:96px">
                             <h4 class="text-white" style="font-size:1.7rem">Thông Báo</h4>
                         </div>
                     </div>
-                    <div class="toast form">
-                        <div class="notification-list_content">
-                            <div class="notification-list_detail">
-                                <p>Hoàn thành báo cáo tháng 10</p>
-                                <p class="text-muted"><small>10 mins ago</small></p>
-                            </div>
-                        </div>
                     </div>
-
-                    <div class="toast success">
-                        <div class="notification-list_content">
-                            <div class="notification-list_detail">
-                                <p>Form báo cáo tháng 10</p>
-                                <p class="text-muted"><small>10 mins ago</small></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="toast list">
-                        <div class="notification-list_content">
-
-                            <div class="notification-list_detail">
-                                <p>Làm báo cáo tháng 10</p>
-
-                                <p class="text-muted"><small>10 mins ago</small></p>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="toast error">
-                        <div class="notification-list_content">
-                            <div class="notification-list_detail">
-                                <p>Hết hạn nộp báo cáo</p>
-                                <p class="text-muted"><small>10 mins ago</small></p>
-                            </div>
-                        </div>
-
-                    </div>
-
                 </div>
+                </div>
+           
+                    <div class="container">
 
-            </div>
-        </div>
-    </div>
+                        <div class="tabs">
+                            <h3 class="active">All</h3>
+                            <h3>Report</h3>
+                            
+                        </div>
+                        <div class="tab-content">
+                            <div class="active">
+                                <h4>Notification</h4>
+                                <p>Hoàn thành báo cáo tháng 10:01/10/2023-23/10/2023</p>
+
+                            </div>
+                            <div>
+                                <h4 style="text-align: center;">Notification</h4>
+                                <form id="form-1">
+                                    <input type="text" placeholder="Enter Emai">
+                                    <input type="text" placeholder="Enter Title">
+                                    <input type="text" placeholder="Enter Decripton">
+                                </form>
+
+                                <button type="button" class="submit-section">Send</button>
+
+
+
+                            </div>
+
+
+                        </div>
+                    </div>
+
+   
+                    <script>
+                        let tabs = document.querySelectorAll(".tabs h3");
+                        let tabContents = document.querySelectorAll(".tab-content div");
+                        tabs.forEach((tab, NOF) => {
+                            tab.addEventListener("click", () => {
+                                tabContents.forEach((content) => {
+                                    content.classList.remove("active");
+                                });
+                                tabs.forEach((tab) => {
+                                    tab.classList.remove("active");
+                                });
+                                tabContents[NOF].classList.add("active");
+                                tabs[NOF].classList.add("active");
+                            });
+                        });
+                    </script>
 </section>
